# Maml-website

./: README.md  README.org  blog.org  bootloader.sh  flake.nix  justfile  pyproject.toml
frontend/vite-project/: README.md  package-lock.json  package.json
frontend/vite-project/src/: App.css  App.tsx  index.css
project_new/: TODO.org  app.py
project_new/static/: script.js
project_new/templates/: index.html
