[tool.poetry]
name = "project-new"
version = "0.1.0"
description = ""
authors = ["k-kahora <mango22mjk@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
runner = "project_new.app:main"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
